# Mud

./: .gitignore  README.md  components.json  package-lock.json  package.json  pkglist_deps.txt  svelte.config.js  vite.config.js
.github/workflows/: build_arch.yml  build_for_arch.yml  build_releases.yml
sandbox/: test.py
scripts/: ITWORKED.txt  test.py
src/: app.html  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cli/: cli.rs
src-tauri/src/commands/: git.rs  mod.rs  mod_install.rs  render.rs
src-tauri/src/context/: forms.rs  mod.rs  parser.rs
src-tauri/src/invocable/: git.rs  mod.rs  runner.rs  settings.rs
src-tauri/src/output/: capture.rs
src-tauri/src/templates/: header.html  home.html  old.html
src-tauri/src/utils/: error_handler.rs  mod.rs  tasks.rs
src-tauri/templates/: config.html.tera
src/assets/css/: styles.css
src/components/: terminal.svelte
src/components/terminal/: stdlib.json  terminal.svelte
src/components/terminal/linting-rules/: mud.cjs  stdlib.json
src/js/: main.js
src/lib/components/activity/: activity.svelte
src/lib/components/terminal/: terminal.svelte
src/lib/components/terminal/linting-rules/: mud.d.ts  mud.js
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/form/: form-description.svelte  form-element-field.svelte  form-field-errors.svelte  form-field.svelte  form-fieldset.svelte  form-label.svelte  form-legend.svelte
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/label/: label.svelte
src/lib/stores/: activityStore.js
src/lib/utils/: logging.js
src/routes/: +layout.js  +layout.svelte  +page.svelte  main.css
src/routes/games/: +page.svelte
src/routes/repl/: +page.js  +page.svelte
src/routes/settings/: +page.svelte
src/routes/splash/: +page.svelte
src/routes/sync/: +page.svelte
static/css/: global.css  main.css  navbar.css  scrollbars.css  settings.css  terminal.css
