[package]
name = "mud"
version = "0.1.0"
description = "A community sourced mod management language, runtime, and desktop application"
authors = ["nickheyer"]
edition = "2021"

[lib]
name = "mud_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
git2 = "0.19.0"
duckscript = { git = "https://github.com/nickheyer/duckscript", branch = "master" }
duckscriptsdk = { git = "https://github.com/nickheyer/duckscript", branch = "master" }
gag = "1.0.0"
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-process = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.39.3", features = ["macros"] }
regex = "1.10.6"
tokio-util = "0.7.12"
tauri-plugin-fs = { version = "2.0.0-rc" }
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-store = "2.0.0-rc"
tauri-plugin-notification = "2.0.0-rc"
tauri-plugin-log = "2.0.0-rc"



